resource/manifests/paciente-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paciente-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paciente-service
  template:
    metadata:
      labels:
        app: paciente-service
    spec:
      containers:
        - name: paciente-service-container
          image: ecno20/cloud-paciente-service:4.2
          ports:
            - containerPort: 8080
