resource/manifests/paciente-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paciente-rest-service
spec:
  selector:
    app: paciente-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
